--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# ide
+.idea
 
 # dependencies
 /node_modules
 /client/node_modules
+backend/vendor
 /.pnp
 .pnp.js
 
@@ -11,6 +13,7 @@
 
 # production
 /build
+*.exe*
 
 # misc
 .DS_Store
