--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -23,5 +23,16 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-http": "^1.5.15",
+    "bcryptjs": "^2.4.3",
+    "graphql": "^14.5.4",
+    "graphql-tag": "^2.10.1",
+    "jquery": "^3.4.1",
+    "react-apollo": "^3.0.1"
+  }
 }
