--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "PORT=4001 react-scripts start",
-    "build": "react-scripts build",
+    "build": "PORT=4001 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
