Dockerized entire project (added dockerfiles, compose file, and ignore files)
Updated handlers to implement dooms day algorithm

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,20 +1,44 @@
-FROM node:7.10 as build-deps
+# Using build to deploy
+FROM node:12.2.0-alpine as build-deps
 
 WORKDIR /app/client
 
-COPY package.json yarn.lock ./
+ENV PATH /app/client/node_modules/.bin:$PATH
 
-RUN yarn
+COPY . .
+RUN pwd
+RUN ls -a
 
-COPY . ./
+RUN yarn install
 
-RUN yarn build
+RUN yarn global add react-scripts@3.0.1
+
+RUN yarn run build
+RUN pwd
+RUN ls -a
+
+FROM mhart/alpine-node
+RUN yarn global add serve
+WORKDIR /app
+COPY --from=build-deps /app/client/build .
+CMD ["serve", "-p", "4001", "-s", "."]
 
 
-FROM nginx:1.12-alpine
-
-COPY --from=build-deps /app/client/build /usr/share/nginx/html
-
-EXPOSE 4001
-
-CMD ["nginx", "-g", "daemon off;"]
+## Using start to run app:
+#FROM node:12.2.0-alpine
+#
+#WORKDIR /app/client
+#
+#ENV PATH /app/client/node_modules/.bin:$PATH
+#
+#COPY . .
+#RUN pwd
+#RUN ls -a
+#
+#RUN yarn install
+#
+#RUN yarn global add react-scripts@3.0.1
+#
+#EXPOSE 4001
+#
+#CMD ["yarn", "start"]
