Graphql Server:     - refactored graphql server into packages (schedule, auth)     - updated dockerfile

--- a/backend/graphql/Dockerfile
+++ b/backend/graphql/Dockerfile
@@ -7,7 +7,10 @@ WORKDIR /app/backend/gurdwara-graphql-server
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -mod=vendor -a -installsuffix cgo -o graphql-server.exec ./graphql/server.go ./graphql/types.go ./graphql/schema.go ./graphql/resolver.go
+#RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go install ./graphql/auth
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go install ./graphql/schedule
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -mod=vendor -a -installsuffix cgo -o graphql-server.exec ./graphql/server.go ./graphql/schema.go
+# ./graphql/server.go ./graphql/types.go ./graphql/schema.go ./graphql/resolver.go
 
 
 FROM alpine:latest
