Auth Client:     - updated login page to include registration     - updated header to change login button to avatar icon when user logs in or registers     - added cookie.js dependency     - added empty AnnouncementPage.js

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -24,7 +24,7 @@ COPY --from=build-deps /app/client/build .
 CMD ["serve", "-p", "4001", "-s", "."]
 
 
-## Using start to run app:
+# Using start to run app:
 #FROM node:12.2.0-alpine
 #
 #WORKDIR /app/client
